# djinni

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  Makefile.am  NEWS  README  README.md  bootstrap.sh  build.ps1  build.sh  configure.ac
src/: CMakeLists.txt  Doxyfile  Dumas-1.set  Makefile.am  annealers.h  djinni.h  djinni_c.h  example.cc  penalties.h  routes.cc  routes.h  twister.cc  utils.cc  utils.h
src/djinni/: annealers.h  penalties.h  routes.h
